Bugfix: no overflow in entity list (e.g. in case of line breaks)

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -720,6 +720,7 @@ body > header aside p {
 #entitylist > .wrapper > ul > li p {
   height: 22px;
   line-height: 22px;
+  overflow: hidden;
 }
 
 #entitylist > .wrapper > ul > li p span {
